# bubichain-v3

./: .gitignore  Makefile.am  README.md  makefile
deploy/: bubi  bubid  start-stop-daemon
docs/: develop.md  manual.md  maunal.md
docs/image/: arch.vsdx
src/: CMakeLists.txt
src/3rd/: CMakeFile  Makefile
src/3rd/basic/include/v8/: v8.h
src/3rd/basic/lib/: json.lib  json_d.lib  v8_external_snapshot.lib  v8_external_snapshot_d.lib  v8_libbase.lib  v8_libbase_d.lib  v8_libplatform.lib  v8_libplatform_d.lib  v8_libsampler.lib  v8_libsampler_d.lib  v8_nosnapshot.lib
src/3rd/ed25519-donna/: CMakeLists.txt
src/3rd/http/: CMakeLists.txt  io_service_pool.cpp  server.cpp  server.hpp
src/3rd/jsoncpp/src/lib_json/: json_value.cpp
src/3rd/pcre-8.39/: pcre-config
src/3rd/rocksdb/: Makefile
src/3rd/rocksdb/build_tools/: build_detect_platform
src/api/: mq_server.cpp  mq_server.h  web_server.cpp  web_server.h  web_server_command.cpp  web_server_helper.cpp  web_server_query.cpp  web_server_update.cpp  websocket_server.cpp  websocket_server.h
src/ca/: CMakeLists.txt  Makefile.am  configure.cpp  configure.h  main.cpp  manager.cpp  manager.h
src/common/: CMakeLists.txt  Makefile.am  argument.cpp  argument.h  ca.cpp  ca.h  ca_manager.cpp  ca_manager.h  cfca.cpp  cfca.h  configure_base.cpp  configure_base.h  daemon.cpp  daemon.h  data_secret_key.cpp  data_secret_key.h  general.cpp  general.h  network.cpp  network.h  pb2json.cpp  pb2json.h  private_key.cpp  private_key.h  storage.cpp  storage.h
src/consensus/: CMakeLists.txt  Makefile.am  consensus.cpp  consensus.h  consensus_manager.cpp  consensus_manager.h  consensus_msg.cpp  consensus_msg.h  pbft.cpp  pbft.h  pbft_instance.cpp  pbft_instance.h  readme.md
src/consenter/: CMakeLists.txt  Makefile.am  consenter.pb.cc  consenter.pb.h  consenter.proto  consenter_manager.cpp  consenter_manager.h  main.cpp  peer_manager.cpp  peer_manager.h  protoc.bat  web_server.cpp  web_server.h
src/consenter/protocol/: Consenter.java
src/daemon/: CMakeLists.txt  Makefile.am
src/daemon/bubi/: Makefile.am  main.cpp
src/daemon/monitor/: main.cpp
src/daemon/monitor/detection/: Makefile.am  monitor_detection.cpp
src/daemon/monitor/monitor/: Makefile.am
src/daemon/slave/: Makefile.am  main.cpp
src/glue/: CMakeLists.txt  Makefile.am  glue_manager.cpp  glue_manager.h  ledger_upgrade.cpp  ledger_upgrade.h  transaction_set.cpp  transaction_set.h
src/ledger/: CMakeLists.txt  Makefile.am  account.cpp  account.h  asset_frm.h  contract_manager.cpp  contract_manager.h  environment.cpp  environment.h  kv_trie.cpp  kv_trie.h  ledger_frm.cpp  ledger_frm.h  ledger_manager.cpp  ledger_manager.h  operation_frm.cpp  operation_frm.h  transaction_frm.cpp  transaction_frm.h  trie.cpp  trie.h
src/main/: CMakeLists.txt  Makefile.am  configure.cpp  configure.h  main.cpp
src/monitor/: CMakeLists.txt  Makefile.am  alert.cpp  alert.h  configure.cpp  configure.h  main.cpp  monitor.cpp  monitor.h  monitor_client.cpp  monitor_client.h  monitor_manager.cpp  monitor_manager.h  monitor_network.cpp  monitor_network.h  notice.cpp  notice.h  system_manager.cpp  system_manager.h  upgrade.cpp  upgrade.h
src/overlay/: CMakeLists.txt  Makefile.am  broadcast.cpp  broadcast.h  peer.cpp  peer.h  peer_manager.cpp  peer_manager.h  peer_network.cpp  peer_network.h
src/proto/: CMakeLists.txt  Makefile.am  chain.proto  common.proto  consensus.proto  monitor.proto  overlay.proto
src/proto/cn/bubi/blockchain/adapter/: Message.java
src/proto/cn/bubi/blockchain/adapter3/: Chain.java  Common.java  Monitor.java  Overlay.java
src/proto/cpp/: chain.pb.cc  chain.pb.h  common.pb.cc  common.pb.h  consensus.pb.cc  consensus.pb.h  monitor.pb.cc  monitor.pb.h  overlay.pb.cc  overlay.pb.h
src/proto/protocol/: Chain.java  Common.java  Consensus.java  LedgerOuterClass.java  Message.java  Overlay.java
src/utils/: CMakeLists.txt  Makefile.am  ca.cpp  ca.h  common.h  crypto.cpp  crypto.h  ecc_sm2.cpp  ecc_sm2.h  entry_cache.h  exprparser.cpp  exprparser.h  file.cpp  file.h  headers.h  logger.cpp  logger.h  net.cpp  net.h  noncopyable.h  serializer.cpp  serializer.h  singleton.h  sm3.cpp  sm3.h  sqlparser.cpp  sqlparser.h  strings.h  system.cpp  system.h  thread.cpp  thread.h  timer.cpp  timer.h  timestamp.cpp  timestamp.h  utils.cpp  utils.h
test/gtest/: Makefile.am  main.cpp
test/gtest/common/: http_client.cpp  http_client.h  web_socket_server.cpp  web_socket_server.h  websocket_test.cpp  websocket_test_nobubi.cpp
test/gtest/test/: api_getTransactionBlob_test.cpp  private_key_test.cpp
test/nodejs/: createAccount.js
test/testlib/: Makefile.am  channel.cpp  channel.h  greeter_client.cc  greeter_server.cc  sm3.h  test.cpp  test.h  test_ed25519.cpp  test_json.cpp  test_leveldbwin.cpp  test_sm2.cpp  test_sm3.cpp  test_sqlite.cpp  test_websocket.cpp  test_websoketssl.cpp  testbubikey.cpp
